--- a/.github/workflows/blog-post.yml
+++ b/.github/workflows/blog-post.yml
@@ -1,7 +1,7 @@
 name: Latest blog post workflow
 on:
   schedule: # Run workflow automatically
-    - cron: "32 * * * *" # Runs every hour, on the hour plus 20 minutes
+    - cron: "0 * * * *" # Runs every hour, on the hour 
 jobs:
   update-readme-with-blog:
     name: Update README with latest blog posts
