--- a/.github/workflows/blog-post.yml
+++ b/.github/workflows/blog-post.yml
@@ -4,11 +4,13 @@ on:
     - cron: "0 5 * * *" # Runs every day at 5
 jobs:
   update-readme-with-blog:
-    name: Update README with latest blog posts
+    name: Update this repo's README with latest blog posts
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: gautamkrishnar/blog-post-workflow@master
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Pull in dev.to posts
+        uses: gautamkrishnar/blog-post-workflow@v1
         with:
           max_post_count: 10
           feed_list: "https://bruno.verachten.fr/feed.xml"
