fix: use template parameter to create absolute blog URLs
Replace invalid feed_base_url parameter with template parameter
that prepends base URL to relative RSS feed URLs. The template
"- [$title](https://bruno.verachten.fr$url)" will convert paths
like "/2025/10/30/..." to full URLs.

--- a/.github/workflows/forced_workflow.yml
+++ b/.github/workflows/forced_workflow.yml
@@ -10,4 +10,4 @@ jobs:
         with:
           max_post_count: 10
           feed_list: "https://bruno.verachten.fr/feed.xml"
-          feed_base_url: "https://bruno.verachten.fr"
+          template: "- [$title](https://bruno.verachten.fr$url)"
