fix: use correct $newline variable in template
Replace incorrect #newline# placeholder with $newline variable
which is the documented way to insert newlines in blog-post-workflow
templates.

--- a/.github/workflows/blog-post.yml
+++ b/.github/workflows/blog-post.yml
@@ -14,4 +14,4 @@ jobs:
         with:
           max_post_count: 10
           feed_list: "https://bruno.verachten.fr/feed.xml"
-          template: "- [$title](https://bruno.verachten.fr$url)#newline#"
+          template: "- [$title](https://bruno.verachten.fr$url)$newline"
