fix: add newline after START comment for first bullet
Add tag_post_pre_newline: true to ensure a newline is inserted
after the BLOG-POST-LIST:START comment, allowing the first blog
post bullet point to render correctly in Markdown.

--- a/.github/workflows/forced_workflow.yml
+++ b/.github/workflows/forced_workflow.yml
@@ -11,3 +11,4 @@ jobs:
           max_post_count: 10
           feed_list: "https://bruno.verachten.fr/feed.xml"
           template: "- [$title](https://bruno.verachten.fr$url)$newline"
+          tag_post_pre_newline: true
